# PlanningForOptimizedSurfaceExplorationOnMars

./: Astar.py  CMakeLists.txt  Environment.py  README.md  RRTStar.py  package.xml
launch/: main_real_mars.launch  mars_curiosity_world.launch
models/curiosity_environment/: model.config
models/curiosity_environment/meshes/: curiosity1.stl  curiosityold.stl  mars_path_simple1.dae
scripts/: CreateMapTxt.py  Djikstra.py  map.txt
scripts/AStar/: AStar.py  AStarMain.py  Mechanism.py
scripts/Dijkstra/: CreateMapTxt.py  Dijkstra.py  DijkstraMain.py  Mechanism.py  map.txt
scripts/RRTStar/: CreateMapTxt.py  Environment.py  RRTStar.py  RRTStarMain.py
worlds/: mars_curiosity.world
