<?xml version="1.0"?>
<package>
  <name>PlanningForOptimizedSurfaceExplorationOnMars</name>
  <version>0.0.0</version>
  <description>The PlanningForOptimizedSurfaceExplorationOnMars package</description>

  <maintainer email="toyas@todo.todo">toyas</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>



 <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
